--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ img{
     padding: 10px;
 }
 footer{
-    background-color: black;
+    background-color: #171531;
     color: blanchedalmond;
 }
 img:hover{
