--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.tik{
     font-family: sans-serif;
     background-color: #323238;
 }
@@ -16,7 +16,7 @@ img{
     background-color: #171531;
     color: blanchedalmond;
 }
-img:hover{
+.tik:hover{
     border: 6px solid greenyellow;
     transition: 0.5s ease-out;
     border-radius: 20px;
